--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
   db:
     image: postgres
     env_file:
-      - .env.docker
+      - .env.docker.example
     volumes:
       - pg_data:/var/lib/postgresql/data
     ports:
